feat: TAP-6563 generate index name